--- a/code/style.css
+++ b/code/style.css
@@ -103,15 +103,28 @@ html{
   }
 
   @media (min-width: 668px){
-      .card-container{
-          justify-content: center;
-          flex-direction: row;
-          flex-wrap: wrap;
+    .card-container{
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
         }
-      .article-card{
-          max-width: 300px;
+    .article-card{
+        max-width: 300px;
          }
-
+      article{
+        font-size: 20px;
+        display: flex;
+        margin: 50px 0;
+      }
+      .big-news{
+        height: 60vh;
+          display: flex;
+          flex-direction: row;
+        }
+      .big-news img{
+        width: 60%;
+      }
       .nav-links{
         display: flex;
         }
@@ -125,12 +138,23 @@ html{
       flex-direction: column;
       align-items: center;
     }
+    article{
+      display: flex;
+      align-items: center;
+      margin: 50px 0;
+    }
     .card-container{
       max-width: 1080px;
     }  
     .article-card{
           max-width: 200px;
       }
+    .big-news{
+      flex-direction: row;
+    }
+    .big-news img{
+      width: 40%;
+    }
       h1{
           display: block;
           font-size: 65px;
