--- a/code/style.css
+++ b/code/style.css
@@ -1,47 +1,70 @@
 body {
   margin: 0;
+  font-family: 'Catamaran', sans-serif;
 }
+
+/*** HEADER ***/
 
 header {
   display: flex;
   justify-content: space-between;
- }
-
-ul {
-  list-style-type: none;
-  display: flex;
   align-items: center;
-  padding: 0;
-  margin: 0;
- }
-
- li {
-  margin: 0 10px;
-  font-family: 'Catamaran', sans-serif;
- }
-
- .logo li {
-   font-weight: 700;
+  padding: 0 10px;
 }
 
- .desktop-menu li {
-   font-weight: 400;
- }
+.logo {
+  display: flex;
+  font-weight: 700;
+}
+
+.logo img {
+  padding: 0 10px;
+  height: 50px;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 10px;
+  color: black;
+}
+
+nav a:hover {
+  font-weight: 700;
+}
+
+@media (max-width: 1023px) {
+  .logo img {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  header nav {
+    display: none;
+  }
+}
+
+/*MAIN NEWS*/
+
+.main-news {
+  display: flex; 
+  align-items: center;
+}
 
 .main-news img {
     width: 100%;
  }
 
-h1 {
+ h1 {
   position: absolute;
-  text-align: center;
-  top: 550px;
-  color: white;
-  font-size: 150px;
-  margin: 0;
+  width: 100%;
   font-family: 'Lobster', cursive;
   width: 100%;
-}
+  font-size: 10vw;
+  color: white;
+  margin: 0;
+  text-align: center;
+ }
 
 h1:hover {
   color: black;  
@@ -49,24 +72,20 @@ h1:hover {
   text-decoration-style: dotted;
 }
 
+/*OTHER NEWS*/
+
 .news-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 20px;
 }
 
 .news {
-  margin: 20px;
+  margin: 0;
   padding: 10px;
   width: 300px;
   border: white;
-  border-style: dotted;
-  border-radius: 8px;
-  border-width: 4px;
-}
-
-.news:hover {
-  border: black;
   border-style: dotted;
   border-radius: 8px;
   border-width: 4px;
@@ -77,8 +96,14 @@ h1:hover {
   border-radius: 8px;
 }
 
+.news:hover {
+  border: black;
+  border-style: dotted;
+  border-radius: 8px;
+  border-width: 4px;
+}
+
 h2 {
-  font-family: 'Catamaran', sans-serif;
   font-weight: 400;
   margin: 0;
   width: 300px;
@@ -86,3 +111,21 @@ h2 {
   padding: 5px;
   font-size: 20px;
 }
+
+/*FOOTER*/
+
+footer {
+  padding: 30px;
+}
+
+footer nav {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+@media (min-width: 768px) {
+  footer {
+    display: none;
+  }
+}
+
