added clickable images and shadows

--- a/code/style.css
+++ b/code/style.css
@@ -24,9 +24,12 @@ header {
 .big-news div {
   
  
-  margin: 1px;
+  margin: 5px;
   align-content: space-between;
   justify-content: center;
+  border: 1px solid;
+  padding: 2px;
+  box-shadow: 2px 2px;
 }
 
 .big-news img {
@@ -51,9 +54,12 @@ div:hover {
 
 .other-news div {
  
-  margin: 1px;
+  margin: 10px;
   align-content: space-between;
   justify-content: center;
+  border: 1px solid;
+  padding: 2px;
+  box-shadow: 2px 2px;
 }
 
 .other-news img {
